    * updated examples to call dc1394_free_camera_nodes
    * examples/dc1394_vloopback.c: workaround potential linux/videodev.h
      problems on some distros' kernel headers.

2004-01-20 Dan Dennedy <dan@dennedy.org>
    * dc1394_multiview.c: bugfix segfault
	
2004-01-21 Damien <ddouxchamps@users.sf.net>
    * print a warning when format7 BPP is zero.
	
2004-01-26 Damien <ddouxchamps@users.sf.net>
    * version is now properly memorized. This caused several problems
      with format_7 cameras.
	
2004-01-28 Damien <ddouxchamps@users.sf.net>
    * added a polling policy to the DMA capture functions using the
      patch from Tim Evers.
    * by popular request, the direct register manipulation functions
      GetCameraControlRegister and SetCameraControlRegister are now
      accessible.

2004-01-29 Tim Evers <tim@klimt.gom.com>
    * libdc1394/dc1394_capture.c (_dc1394_dma_multi_capture_private):
      in Poll-mode return DC1394_NO_FRAME not FAILURE

2004-01-31 Damien <ddouxchamps@users.sf.net>
    * Version 0.9.3
	
2004-02-03 Damien <ddouxchamps@users.sf.net>
    * fixed bpp issue in _dc1394_basic_format7_setup
    * fixed missing *4 in boundary check of GetConfigROMTaggedRegister

2004-02-04 Kristoffer Delforge <delforge@users.sf.net>
    * fixed uninitialized values in dc1394camerahandle_t
    * changed 0xffff to DC1394_NO_CAMERA in dc1394_get_sorted_camera_nodes
    * changed some calue by &value[0] in dc1394_get_camera_info
    * removed unnecessary '& 0xFFFF' in dc1394_get_camera_info
    * simplify FEATURE_TRIGGER check in dc1394_get_camera_feature
    * added printf warning before return in dc1394_print_feature
    * replaced '== DC1394_FAILURE' by '!= DC1394_SUCCESS'
    * removed FORMAT_STILL_IMAGE definition to 390, it messes up with the
      number of available formats
    * replaced a 0x1<<31 by ON_VALUE

2004-02-04 Damien <ddouxchamps@users.sf.net>
    * apply patches from Tim Evers and Johann Schoonees